# valentinus

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml  test.yml
.well-known/: funding-manifest-urls
data/: Scraped_Car_Review_tesla.csv
examples/: cosine_query_example.md  cosine_query_example.rs  embeddings.md  example_embedding.rs  example_nn.rs  nearest_query_example.md  nearest_query_example.rs  nn.md  vectors.rs
src/: database.rs  embeddings.rs  filter.rs  lib.rs  main.rs  md2f.rs  ml.rs  onnx.rs
src/embeddings/: database.rs  ml.rs  mod.rs
