[package]
name = "valentinus"
version = "0.4.1"
edition = "2021"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
documentation = "https://docs.rs/valentinus"
description = "Next generation vector database built with LMDB bindings"
repository = "https://github.com/kn0sys/valentinus"
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "nlp",
    "deep-learning",
    "machine-learning",
    "transformers",
    "vector-database"
]
categories = ["science::ml"]

[lib]
name = "valentinus"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode        = "1.3.3"
lazy_static    = "1.4.0"
linfa-nn       = "0.7.0"
kn0sys-lmdb-rs = "0.1.4"
log            = "0.4"
ndarray        = { version = "0.15.6", features = ["serde"] }
ort            = "2.0.0-rc.4"
regex          = "1.10.5"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0.120"
sysinfo        = "0.31.2" 
tokenizers     = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }
uuid           = { version = "1.10.0", features = [ "v4"] }

[dev-dependencies]
csv            = "1.3.0"
env_logger     = "0.11.5"
rand           = "0.8.5"
