[package]
name = "valentinus"
version = "0.6.0"
edition = "2021"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
documentation = "https://docs.rs/valentinus"
description = "Next generation vector database built with LMDB bindings"
repository = "https://github.com/kn0sys/valentinus"
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "nlp",
    "deep-learning",
    "machine-learning",
    "transformers",
    "vector-database"
]
categories = ["database"]

[lib]
name = "valentinus"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode        = "1.3.3"
kn0sys-nn       = "0.9.1"
kn0sys-lmdb-rs = "0.1.6"
log            = "0.4"
ndarray        = { package = "kn0sys_ndarray", version = "0.17.1", features = ["serde"] }
# TODO: sync ort upstream with disable-linking once published
#ort            = "2.0.0-rc.9"
ort 	       = { package = "kn0sys_ort", path = "./ort", version = "2.0.1-rc.9"}
regex          = "1.10.5"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0.120"
sysinfo        = "0.33.0" 
thiserror      = "2.0.3"
tokenizers     = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }
uuid           = { version = "1.10.0", features = [ "v4"] }

[dev-dependencies]
csv            = "1.3.0"
env_logger     = "0.11.5"
rand           = "0.9.0"
